Fixed z-index for inputs

--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -73,6 +73,7 @@ input {
 input.card {
 	position: relative;
 	outline: none;
+	z-index: 1;
 }
 
 /* On mouse-over, add a deeper shadow */
